Bug 83137 - xpdfimport.exe crashes
Summary: xpdfimport.exe crashes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other Windows (All)
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0 target:4.3.2 target:4.2.7
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-27 10:59 UTC by Urmas
Modified: 2014-08-28 09:47 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
Problematic file (17.91 KB, application/x-pdf)
2014-08-27 10:59 UTC, Urmas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Urmas 2014-08-27 10:59:41 UTC
Created attachment 105328 [details]
Problematic file

subj.
Comment 1 Commit Notification 2014-08-27 14:45:45 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=72f4f0e9e7db6798ff002632d5bc19b72a671306

Resolves: fdo#83137 NULL pAction



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2014-08-27 16:20:52 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=767850c68e8362661df06c6ee234cfb65d078121&h=libreoffice-4-3

Resolves: fdo#83137 NULL pAction


It will be available in LibreOffice 4.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2014-08-28 09:47:06 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=737596aac515d6a24ec154ef30d9d1c2d20dd01f&h=libreoffice-4-2

Resolves: fdo#83137 NULL pAction


It will be available in LibreOffice 4.2.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.