Resolves: fdo#83137 NULL pAction

Change-Id: I74c4e32aae1e3aa74d197f132c900627062b6d01
(cherry picked from commit 72f4f0e9e7db6798ff002632d5bc19b72a671306)
Reviewed-on: https://gerrit.libreoffice.org/11145
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>